# namaz-time-project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: config.py  errors.py  main.py  rate_limit.py  schemas.py  service.py
frontend/: index.html  package-lock.json  package.json
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: api.ts  app.ts  constants.ts  dom.ts  formatters.ts  locales.ts  main.ts  prayer.ts  render.ts  router.ts  state.ts  storage.ts  styles.css  types.ts
frontend/static/: app.js  styles.css
frontend/static/js/: api.js  app.js  constants.js  dom.js  formatters.js  prayer.js  render.js  router.js  state.js  storage.js
tests/: __init__.py  test_api.py  test_service.py
