[project]
name = "namaz-time-project"
version = "0.1.0"
description = "Prayer times MVP built with FastAPI"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
